src/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>This field is intended to be used by Case Handling and CRM  team ONLY.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Issue</fullName>
            </value>
            <value>
                <fullName>General Issues</fullName>
            </value>
            <value>
                <fullName>Access/Visibility</fullName>
            </value>
            <value>
                <fullName>Mass Update Request</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>ERM</fullName>
            </value>
            <value>
                <fullName>Security Group</fullName>
            </value>
            <value>
                <fullName>User Access</fullName>
            </value>
            <value>
                <fullName>CH - General Issues</fullName>
                <label>CH SWS - General Issue</label>
            </value>
            <value>
                <fullName>CH - User Access</fullName>
                <label>CH SWS - User Access</label>
            </value>
            <value>
                <fullName>CH - Security Group</fullName>
                <label>CH SWS - Security Group</label>
            </value>
            <value>
                <fullName>CH- Work Group Management and Authorized Contact</fullName>
                <label>CH SWS - Workgroup Management and Authorized Contact</label>
            </value>
            <value>
                <fullName>CH - Key User Management</fullName>
                <label>CH SWS - Key User Management</label>
            </value>
            <value>
                <fullName>HWS - Authorized Contact</fullName>
                <label>CH HWS - Authorized Contact</label>
            </value>
            <value>
                <fullName>HWS - General Issues</fullName>
                <label>CH HWS - General Issue</label>
            </value>
            <value>
                <fullName>HWS - User Access</fullName>
                <label>CH HWS - User Access</label>
            </value>
            <value>
                <fullName>HWS - Security Group</fullName>
                <label>CH HWS - Security Group</label>
            </value>
            <value>
                <fullName>Enterprise (including Partners)</fullName>
            </value>
            <value>
                <fullName>NAM Contracted Quote</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>Order-to-Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>