src/objects/Case/fields/CH_3rdPartySecurityGroup__c.field-meta.xml
<CustomField>
    <fullName>CH_3rdPartySecurityGroup__c</fullName>
    <description>NOKIASC-23511: To manage Support Ticket access by 3rd Party.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>3rd Party Security Group</label>
    <length>150</length>
    <type>Text</type>
</CustomField>