src/objects/Case/fields/CH_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>CH_Account_Name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>