src/objects/Case/fields/CH_AccountNameforNotifications__c.field-meta.xml
<CustomField>
    <fullName>CH_AccountNameforNotifications__c</fullName>
    <description>NOKIASC-24537: To restrict Account Name being shown in notifications.</description>
    <formula>IF ( ISPICKVAL ( Account.Customer_Compliance__c , &quot;US_Govern&quot; ) , &quot;Information Restricted due to Nokia Compliancy Requirements&quot; , Account.Name )</formula>
    <label>Account Name for Notifications</label>
    <type>Text</type>
</CustomField>