src/objects/Case/fields/CH_Action_ExternalSystem__c.field-meta.xml
<CustomField>
    <fullName>CH_Action_ExternalSystem__c</fullName>
    <description>Action for the external systems for the Case-object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Action external system</label>
    <length>50</length>
    <type>Text</type>
</CustomField>