src/objects/Case/fields/CH_ActionTaken__c.field-meta.xml
<CustomField>
    <fullName>CH_ActionTaken__c</fullName>
    <description>This field gives action taken on problem.
Renaming the field as part of  NOKIASC-21738</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recovery Actions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>