src/objects/Case/fields/CH_Additional_Case_Contacts__c.field-meta.xml
<CustomField>
    <fullName>CH_Additional_Case_Contacts__c</fullName>
    <description>This field should store any additional email addresses that should be included in notifications.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Case Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>