src/objects/Case/fields/CH_AdditionalContacts__c.field-meta.xml
<CustomField>
    <fullName>CH_AdditionalContacts__c</fullName>
    <description>Free text field for the User to fill in additional email addresses belonging to customer  and nokia personnel. These can then be used when sending outbound emails from the tool.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Contacts</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>