src/objects/Case/fields/CH_AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>CH_AdditionalInfo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>