src/objects/Case/fields/CH_Article_Attached__c.field-meta.xml
<CustomField>
    <fullName>CH_Article_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CH_Article Attached?</label>
    <type>Checkbox</type>
</CustomField>