src/objects/Case/fields/CH_AssessedOutage__c.field-meta.xml
<CustomField>
    <fullName>CH_AssessedOutage__c</fullName>
    <description>Used to indicate if this was actually an Outage on the Network Element, BTS etc. or not. Set after RCA has been performed.</description>
    <label>Assessed Outage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>