src/objects/Case/fields/CH_AssignedDate__c.field-meta.xml
<CustomField>
    <fullName>CH_AssignedDate__c</fullName>
    <description>Set assigned date/time when status is set to Assigned</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Date/Time</label>
    <type>DateTime</type>
</CustomField>