src/objects/Case/fields/CH_BlockCases__c.field-meta.xml
<CustomField>
    <fullName>CH_BlockCases__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox become true based on trigger CH_BlacklistCaseReportTrigger</description>
    <label>Block Cases</label>
    <type>Checkbox</type>
</CustomField>