src/objects/Case/fields/CH_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>CH_BusinessUnit__c</fullName>
    <description>Reporting field: Get Product Business Unit into standard report types</description>
    <formula>Product.CH_Business_Unit__c</formula>
    <inlineHelpText>Reporting field: Get Product Business Unit into standard report types</inlineHelpText>
    <label>Rep: Product Business Unit</label>
    <type>Text</type>
</CustomField>