src/objects/Case/fields/CH_CancelCaseFlag__c.field-meta.xml
<CustomField>
    <fullName>CH_CancelCaseFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US 15433 - Flag to for case Cancellation capture</description>
    <label>CH_CancelCaseFlag</label>
    <type>Checkbox</type>
</CustomField>