src/objects/Case/fields/CH_CAPS_AttachmentMetadatafromNAIP__c.field-meta.xml
<CustomField>
    <fullName>CH_CAPS_AttachmentMetadatafromNAIP__c</fullName>
    <description>NAIP will send CAPS attachment metadata that to be patched to CAPS in JSON format</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CAPS_AttachmentMetadatafromNAIP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>