src/objects/Case/fields/CH_CARES_ServiceAgreement__c.field-meta.xml
<CustomField>
    <fullName>CH_CARES_ServiceAgreement__c</fullName>
    <formula>Entitlement.ServiceContract.CH_CARES_ServiceAgreement__c</formula>
    <label>CARES Service Agreement</label>
    <type>Text</type>
</CustomField>