src/objects/Case/fields/CH_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CH_Case_Number__c</fullName>
    <description>Prefix the Problem with PRB</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, IF( RecordType.DeveloperName = &quot;CH_Problem&quot;, (&quot;PRB&quot; + CaseNumber) , CaseNumber), &quot;_Parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>