src/objects/Case/fields/CH_CaseCause__c.field-meta.xml
<CustomField>
    <fullName>CH_CaseCause__c</fullName>
    <label>Case Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caused by Customer</fullName>
            </value>
            <value>
                <fullName>Procedural error by Customer</fullName>
            </value>
            <value>
                <fullName>Information provided</fullName>
            </value>
            <value>
                <fullName>Non-Nokia - 3rd Party</fullName>
            </value>
            <value>
                <fullName>Non – Product – Environment / Infrastructure</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Migration / Upgrade</fullName>
            </value>
            <value>
                <fullName>HW</fullName>
            </value>
            <value>
                <fullName>HW 3rd Party</fullName>
            </value>
            <value>
                <fullName>HW Design</fullName>
            </value>
            <value>
                <fullName>Non Product cause by Nokia</fullName>
            </value>
            <value>
                <fullName>Non Reproducible</fullName>
            </value>
            <value>
                <fullName>Procedural error by Nokia</fullName>
            </value>
            <value>
                <fullName>Subscriber Data</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>SW Defective Fix</fullName>
            </value>
            <value>
                <fullName>SW 3rd Party</fullName>
            </value>
            <value>
                <fullName>Technical Documentation error</fullName>
            </value>
            <value>
                <fullName>No Solution available</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Defective Fix</fullName>
                <isActive>false</isActive>
                <label>Defective Fix</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>