src/objects/Case/fields/CH_CaseComments__c.field-meta.xml
<CustomField>
    <fullName>CH_CaseComments__c</fullName>
    <description>This is a technical field updated by workflow on case comments. The aim is that when this field is changed to fire an email alert to the case owner mentioning that a case comment was created by a portal user</description>
    <label>CH_CaseComments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>