src/objects/Case/fields/CH_CaseCreationDuration__c.field-meta.xml
<CustomField>
    <fullName>CH_CaseCreationDuration__c</fullName>
    <description>Calculates the difference (minutes) between &quot;CH_DateTimeCaseInitiation&quot; and CreatedDate (two decimal places).</description>
    <formula>IF(HWS_RecordTypeCheck__c ,
IF(ISBLANK(HWS_Case_Ordered_Date__c-CH_CaseInitiationDate__c),NULL,
(HWS_Case_Ordered_Date__c-CH_CaseInitiationDate__c) * 24 * 60),
IF(ISBLANK(CreatedDate-CH_CaseInitiationDate__c),0,
(CreatedDate-CH_CaseInitiationDate__c) * 24 * 60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Creation Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>