src/objects/Case/fields/CH_CaseInitiationDate__c.field-meta.xml
<CustomField>
    <fullName>CH_CaseInitiationDate__c</fullName>
    <description>Used to update case initiation date when case creation starts.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Initiation Date</label>
    <type>DateTime</type>
</CustomField>