src/objects/Case/fields/CH_CaseMilestoneCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CH_CaseMilestoneCompletionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseMilestoneCompletionDate</label>
    <type>DateTime</type>
</CustomField>