src/objects/Case/fields/CH_CaseMilestoneStartDate__c.field-meta.xml
<CustomField>
    <fullName>CH_CaseMilestoneStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseMilestoneStartDate</label>
    <type>DateTime</type>
</CustomField>