src/objects/Case/fields/CH_CaseMilestoneTargetDate__c.field-meta.xml
<CustomField>
    <fullName>CH_CaseMilestoneTargetDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseMilestoneTargetDate</label>
    <type>DateTime</type>
</CustomField>