src/objects/Case/fields/CH_CaseOriginSystem__c.field-meta.xml
<CustomField>
    <fullName>CH_CaseOriginSystem__c</fullName>
    <label>Case Origin System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ptf_fi</fullName>
            </value>
            <value>
                <fullName>ptf_in</fullName>
            </value>
            <value>
                <fullName>ptf_us</fullName>
            </value>
            <value>
                <fullName>ptf_cn</fullName>
            </value>
            <value>
                <fullName>tmobile-tim</fullName>
            </value>
            <value>
                <fullName>tcom-dtag</fullName>
            </value>
            <value>
                <fullName>orange-irma</fullName>
            </value>
            <value>
                <fullName>vodafone</fullName>
            </value>
            <value>
                <fullName>Schweizer-Armee</fullName>
            </value>
            <value>
                <fullName>megafon</fullName>
            </value>
            <value>
                <fullName>telefonica</fullName>
            </value>
            <value>
                <fullName>pnms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>