src/objects/Case/fields/CH_Cause_Type__c.field-meta.xml
<CustomField>
    <fullName>CH_Cause_Type__c</fullName>
    <label>Cause Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CH_Caused_By__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Procedural</fullName>
            </value>
            <value>
                <fullName>Process Defect</fullName>
            </value>
            <value>
                <fullName>Product Defect</fullName>
                <default>true</default>
                <label>Product Defect</label>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Force Majeure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>