src/objects/Case/fields/CH_Caused_By__c.field-meta.xml
<CustomField>
    <fullName>CH_Caused_By__c</fullName>
    <label>Caused By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nokia</fullName>
                <default>true</default>
                <label>Nokia</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>