src/objects/Case/fields/CH_CauseoftheIncident__c.field-meta.xml
<CustomField>
    <fullName>CH_CauseoftheIncident__c</fullName>
    <description>This field gives reason of incident problem.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cause of the Incident</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>