src/objects/Case/fields/CH_CDB_ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>CH_CDB_ContractNumber__c</fullName>
    <formula>Entitlement.ServiceContract.CH_CDB_ContractNumber__c</formula>
    <label>CDB Contract Number</label>
    <type>Text</type>
</CustomField>