src/objects/Case/fields/CH_CIRCount__c.field-meta.xml
<CustomField>
    <fullName>CH_CIRCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CIR Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>