src/objects/Case/fields/CH_Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>CH_Closure_Reason__c</fullName>
    <description>While closing a problem ticket, one of the reasons to be selected for closure.</description>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solution Provided</fullName>
            </value>
            <value>
                <fullName>Workaround Provided</fullName>
            </value>
            <value>
                <fullName>Management Decision</fullName>
            </value>
            <value>
                <fullName>Identical Problem</fullName>
            </value>
            <value>
                <fullName>Duplicate Problem</fullName>
            </value>
            <value>
                <fullName>Solution not needed</fullName>
            </value>
            <value>
                <fullName>Not Reproducible</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>