src/objects/Case/fields/CH_Code_Red_Status__c.field-meta.xml
<CustomField>
    <fullName>CH_Code_Red_Status__c</fullName>
    <label>Code Red Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code Red Active</fullName>
            </value>
            <value>
                <fullName>Code Red Cleared</fullName>
            </value>
            <value>
                <fullName>Code Red Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>