src/objects/Case/fields/CH_ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>CH_ContractNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContractNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>