src/objects/Case/fields/CH_CorrectiveActions__c.field-meta.xml
<CustomField>
    <fullName>CH_CorrectiveActions__c</fullName>
    <description>This field gives corrective actions done on cause.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Corrective Actions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>