src/objects/Case/fields/CH_CRNumber__c.field-meta.xml
<CustomField>
    <fullName>CH_CRNumber__c</fullName>
    <description>Used to manually enter the reference number to the R&amp;D CR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>R&amp;D Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>