src/objects/Case/fields/CH_CRStart__c.field-meta.xml
<CustomField>
    <fullName>CH_CRStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CR Start</label>
    <type>DateTime</type>
</CustomField>