src/objects/Case/fields/CH_CRStatus__c.field-meta.xml
<CustomField>
    <fullName>CH_CRStatus__c</fullName>
    <description>Update the problem with Change Request state.</description>
    <label>CR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer Done</fullName>
            </value>
            <value>
                <fullName>Correction not Needed</fullName>
            </value>
            <value>
                <fullName>Correction Planned</fullName>
            </value>
            <value>
                <fullName>Correction Ready</fullName>
            </value>
            <value>
                <fullName>Workaround Received</fullName>
            </value>
            <value>
                <fullName>Information Requested</fullName>
            </value>
            <value>
                <fullName>Information Provided</fullName>
            </value>
            <value>
                <fullName>Support Provided</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
                <isActive>false</isActive>
                <label>Created</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Requested</fullName>
                <isActive>false</isActive>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Solution Provided</fullName>
                <isActive>false</isActive>
                <label>Solution Provided</label>
            </value>
            <value>
                <fullName>Temporary Solution Provided</fullName>
                <isActive>false</isActive>
                <label>Temporary Solution Provided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>