src/objects/Case/fields/CH_CRStatusTimestamp__c.field-meta.xml
<CustomField>
    <fullName>CH_CRStatusTimestamp__c</fullName>
    <description>This field represents the last time the &apos;CR Status&apos; field was updated.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field represents the last time the &apos;CR Status&apos; field was updated.</inlineHelpText>
    <label>CR Status Timestamp</label>
    <type>DateTime</type>
</CustomField>