src/objects/Case/fields/CH_CurrentQueue__c.field-meta.xml
<CustomField>
    <fullName>CH_CurrentQueue__c</fullName>
    <description>Display the current queue, if the Workgroup members role is Queue</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Queue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>