src/objects/Case/fields/CH_CurrentUserContactorCreator__c.field-meta.xml
<CustomField>
    <fullName>CH_CurrentUserContactorCreator__c</fullName>
    <formula>OR(IF ($User.ContactId = ContactId,True,False),IF ($User.Id = CreatedById,True,False) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CH CurrentUserContactorCreator</label>
    <type>Checkbox</type>
</CustomField>