src/objects/Case/fields/CH_CurrentWorkGroup__c.field-meta.xml
<CustomField>
    <fullName>CH_CurrentWorkGroup__c</fullName>
    <description>This field will contain the current Work Group and is updated upon Case Assignment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Workgroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>