src/objects/Case/fields/CH_Customer_CDB_for_Caps__c.field-meta.xml
<CustomField>
    <fullName>CH_Customer_CDB_for_Caps__c</fullName>
    <description>To send this value to CAPS system if their is any update in CH_CDB_CustomerId__c in Service Contract</description>
    <formula>Entitlement.ServiceContract.CH_CDB_CustomerId__c</formula>
    <label>Customer CDB for Caps</label>
    <type>Text</type>
</CustomField>