src/objects/Case/fields/CH_Customer_Pending_Time__c.field-meta.xml
<CustomField>
    <fullName>CH_Customer_Pending_Time__c</fullName>
    <label>DELETE Customer Pending Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>