src/objects/Case/fields/CH_CustomerDescription__c.field-meta.xml
<CustomField>
    <fullName>CH_CustomerDescription__c</fullName>
    <description>This is a new custom field that is being used instead of the ootb Description field​</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>