src/objects/Case/fields/CH_CustomerPendingTime__c.field-meta.xml
<CustomField>
    <fullName>CH_CustomerPendingTime__c</fullName>
    <description>Total Duration of when a Case has been in status Pending Customer?</description>
    <formula>NOW() -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DELETE Customer Pending TimeDe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>