src/objects/Case/fields/CH_CustomerSolution__c.field-meta.xml
<CustomField>
    <fullName>CH_CustomerSolution__c</fullName>
    <description>Solution details field for portal display. Field is populated when solution details are sent via email to costumer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>