src/objects/Case/fields/CH_CustomerSolutionAcceptance__c.field-meta.xml
<CustomField>
    <fullName>CH_CustomerSolutionAcceptance__c</fullName>
    <description>This is a field for prototyping</description>
    <label>Customer Solution Acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>