src/objects/Case/fields/CH_CustomerSolutionRejectionReason__c.field-meta.xml
<CustomField>
    <fullName>CH_CustomerSolutionRejectionReason__c</fullName>
    <description>This is a temp field for prototyping</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Solution Rejection Reason</label>
    <type>TextArea</type>
</CustomField>