src/objects/Case/fields/CH_CustomerTemporarySolution__c.field-meta.xml
<CustomField>
    <fullName>CH_CustomerTemporarySolution__c</fullName>
    <description>Temporary solutions field for portal display. Field is populated when temporary solution is sent via email to costumer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Temporary Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>