src/objects/Case/fields/CH_Defect__c.field-meta.xml
<CustomField>
    <fullName>CH_Defect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We should share the field with the Problem Case the Case is related/linked to.</description>
    <label>Defect</label>
    <type>Checkbox</type>
</CustomField>