src/objects/Case/fields/CH_DefectiveFix__c.field-meta.xml
<CustomField>
    <fullName>CH_DefectiveFix__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field gives defective fix.</description>
    <label>Defective Fix</label>
    <type>Checkbox</type>
</CustomField>