src/objects/Case/fields/CH_DefectiveFixText__c.field-meta.xml
<CustomField>
    <fullName>CH_DefectiveFixText__c</fullName>
    <description>Formula field to reflect the binary Defective Fix checkbox field as text for use in email templates.</description>
    <formula>IF(CH_DefectiveFix__c, &quot;True&quot;, &quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defective Fix Text</label>
    <type>Text</type>
</CustomField>