src/objects/Case/fields/CH_DefectText__c.field-meta.xml
<CustomField>
    <fullName>CH_DefectText__c</fullName>
    <description>Formula field to convert the binary checkbox value for Defect into text for use in email templates.</description>
    <formula>IF(CH_Defect__c, &quot;True&quot;, &quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defect Text</label>
    <type>Text</type>
</CustomField>