src/objects/Case/fields/CH_DeferralApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>CH_DeferralApprovedDate__c</fullName>
    <description>CH: Date/Time when customer and CCM approved the Deferral.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Deferral Approved Date</label>
    <type>DateTime</type>
</CustomField>