src/objects/Case/fields/CH_DeferralDetails__c.field-meta.xml
<CustomField>
    <fullName>CH_DeferralDetails__c</fullName>
    <description>CH: Record what Deferral agreement was agreed to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Deferral Details</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>