src/objects/Case/fields/CH_DeferredSolutionProvidedTarget__c.field-meta.xml
<CustomField>
    <fullName>CH_DeferredSolutionProvidedTarget__c</fullName>
    <description>CH: Date/Time customer and CCM approved the deferred  solution for a defect is to be provided</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Deferred Solution Provided Target Date</label>
    <type>DateTime</type>
</CustomField>