src/objects/Case/fields/CH_Discovered_in__c.field-meta.xml
<CustomField>
    <fullName>CH_Discovered_in__c</fullName>
    <label>Discovered in</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CH_Reported_By__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Upgrade</fullName>
            </value>
            <value>
                <fullName>Customer Pilot</fullName>
            </value>
            <value>
                <fullName>Customer Actual use</fullName>
            </value>
            <value>
                <fullName>Customer Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>