src/objects/Case/fields/CH_Display_Workgroup_Instructions__c.field-meta.xml
<CustomField>
    <fullName>CH_Display_Workgroup_Instructions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CH Display Workgroup Instructions</label>
    <type>Checkbox</type>
</CustomField>